--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "express": "^4.21.1",
+    "node-fetch": "^2.7.0",
     "sqlite3": "^5.1.7"
   }
 }
