--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "node-fetch": "^2.7.0",
+    "pg": "^8.13.1",
     "sqlite3": "^5.1.7"
   }
 }
