--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
       {
         "src": "server.js",
         "use": "@vercel/node"
+      },
+      {
+        "src": "api/greetings.js",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
