--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js",
-  "dev": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "node-fetch": "^2.7.0",
     "pg": "^8.13.1",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
 }
